Fix scrollbars on textareas in IE10

--- a/app/react/styles/modules/text-editing.styl
+++ b/app/react/styles/modules/text-editing.styl
@@ -6,6 +6,9 @@
     display block
     width 100%
 
+  textarea
+    overflow hidden
+
 .character-limit
   position absolute
   top -8px
